--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,23 @@
 ---
+// import { Icon } from 'astro-icon/components'
 
+import AuthLayout from '~/layouts/AuthLayout.astro'
+import Login from './_Login'
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<AuthLayout title="Ingreso">
+  <div class="flex min-h-screen flex-col items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+    <div class="sm:w-full sm:max-w-md">
+      <!-- <Icon name="logo" width="100%" height="100%" class="m-auto mb-6 max-w-[300px]" /> -->
+      <h2 class="mt-6 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
+        Ingresa a tu cuenta
+      </h2>
+    </div>
+
+    <div class="mt-10 sm:w-full sm:max-w-[480px]">
+      <div class="bg-white px-6 py-12 shadow sm:rounded-lg sm:px-12">
+        <Login client:only="solid-js" />
+      </div>
+    </div>
+  </div>
+</AuthLayout>
