--- a/src/layouts/AdminLayout.astro
+++ b/src/layouts/AdminLayout.astro
@@ -21,7 +21,7 @@ interface Props {
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{Astro.props.title} | Condimento</title>
+    <title>{Astro.props.title} | Gratitud</title>
   </head>
   <body class="h-full">
     <div class="flex flex-col h-full">
