--- a/src/layouts/AuthLayout.astro
+++ b/src/layouts/AuthLayout.astro
@@ -1,7 +1,7 @@
 ---
 import { Toaster } from 'solid-sonner'
 
-// import LoaderOverlay from '~/components/shared/LoaderOverlay'
+import LoaderOverlay from '~/components/shared/LoaderOverlay'
 
 import '~/assets/global.css'
 
@@ -18,11 +18,11 @@ interface Props {
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{Astro.props.title}</title>
+    <title>{Astro.props.title} | Gratitud</title>
   </head>
   <body class="bg-gray-50">
     <slot />
-    <!-- <LoaderOverlay client:load /> -->
+    <LoaderOverlay client:load />
     <Toaster client:load expand position="top-right" />
   </body>
 </html>
