--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -15,6 +15,8 @@
   --o-dialog-header-btn-close-bg-hover-color: theme(colors.pink.300);
 
   --o-admin-menu-expanded-border-current-color: theme(colors.pink.300);
+
+  --o-btn-filter-text-hover-color: theme(colors.pink.400);
 }
 
 .spinner_Uvk8 {
