--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -237,3 +237,40 @@
     transform: translateY(-8px);
   }
 }
+
+@keyframes skeleton-fade {
+  0%,
+  100% {
+    opacity: 0.4;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+.skeleton {
+  height: auto;
+  width: 100%;
+  position: relative;
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+}
+.skeleton[data-animate='true']::after {
+  animation: skeleton-fade 1500ms linear infinite;
+}
+.skeleton[data-visible='true'] {
+  overflow: hidden;
+}
+.skeleton[data-visible='true']::before {
+  position: absolute;
+  content: '';
+  inset: 0;
+  z-index: 10;
+  background-color: white;
+}
+.skeleton[data-visible='true']::after {
+  position: absolute;
+  content: '';
+  inset: 0;
+  z-index: 11;
+  background-color: gray;
+}
