--- a/src/pages/gratitud/pide-y-se-te-dara/_Table.astro
+++ b/src/pages/gratitud/pide-y-se-te-dara/_Table.astro
@@ -1,5 +1,5 @@
 ---
-import { and, eq } from 'drizzle-orm'
+import { and, desc, eq } from 'drizzle-orm'
 
 import { Api, Error } from '~/enums'
 import type { CustomError } from '~/types'
@@ -40,6 +40,7 @@ if (Astro.locals.userTokenError) {
             eq(gratitudeTable.isMaterialized, false),
           ),
         )
+        .orderBy(desc(gratitudeTable.createdAt))
     } catch {
       if (import.meta.env.DEV) {
         console.error('Error en DB. Obtención de agradecimeintos.')
