--- a/src/pages/gratitud/recordar/_Table.astro
+++ b/src/pages/gratitud/recordar/_Table.astro
@@ -1,5 +1,5 @@
 ---
-import { and, eq } from 'drizzle-orm'
+import { and, eq, sql } from 'drizzle-orm'
 
 import { Api, Error } from '~/enums'
 import type { CustomError } from '~/types'
@@ -37,13 +37,36 @@ if (Astro.locals.userTokenError) {
         .where(
           and(
             eq(gratitudeTable.personId, Astro.locals.userId),
-            eq(gratitudeTable.isMaterialized, false),
+            eq(gratitudeTable.isMaterialized, true),
             eq(gratitudeTable.isRemind, false),
           ),
         )
-      // Hacer consulta aleatoria
-      // Obtener los 3 primeros
-      // En el botón recordar, marcar como redordados.
+        .orderBy(sql`RANDOM()`)
+        .limit(3)
+      if (data.length === 0) {
+        await db
+          .update(gratitudeTable)
+          .set({ isRemind: false })
+          .where(eq(gratitudeTable.personId, Astro.locals.userId))
+        data = await db
+          .select({
+            id: gratitudeTable.id,
+            title: gratitudeTable.title,
+            description: gratitudeTable.description,
+            isMaterialized: gratitudeTable.isMaterialized,
+            createdAt: gratitudeTable.createdAt,
+          })
+          .from(gratitudeTable)
+          .where(
+            and(
+              eq(gratitudeTable.personId, Astro.locals.userId),
+              eq(gratitudeTable.isMaterialized, true),
+              eq(gratitudeTable.isRemind, false),
+            ),
+          )
+          .orderBy(sql`RANDOM()`)
+          .limit(3)
+      }
     } catch {
       if (import.meta.env.DEV) {
         console.error('Error en DB. Obtención de agradecimeintos.')
