--- a/src/components/admin/AdminHeader.astro
+++ b/src/components/admin/AdminHeader.astro
@@ -18,16 +18,27 @@ import AdminMenu from './AdminMenu'
       <div class="border-b border-gray-700">
         <div class="flex h-16 items-center justify-between px-4 sm:px-0">
           <div class="flex items-center">
-            {
-              Astro.locals.menu?.length >= 6 && (
-                <AdminMenu
-                  client:only="solid-js"
-                  menu={Astro.locals.menu ?? []}
-                  currentPath={Astro.url.pathname}
-                  organizations={Astro.locals.organizations}
-                />
-              )
-            }
+            <div class="lg:hidden">
+              {/* Mobile menu button */}
+              <AdminMenu
+                client:only="solid-js"
+                menu={Astro.locals.menu ?? []}
+                currentPath={Astro.url.pathname}
+                organizations={Astro.locals.organizations}
+              />
+            </div>
+            <div class="hidden lg:block">
+              {
+                Astro.locals.menu?.length >= 6 && (
+                  <AdminMenu
+                    client:only="solid-js"
+                    menu={Astro.locals.menu ?? []}
+                    currentPath={Astro.url.pathname}
+                    organizations={Astro.locals.organizations}
+                  />
+                )
+              }
+            </div>
             <a href="/admin/welcome" class="o-page ml-2">
               <Icon name="logo" width="100%" height="100%" class="w-[160px]" />
             </a>
@@ -62,7 +73,7 @@ import AdminMenu from './AdminMenu'
               </div>
             </div>
           </div>
-          <div class="hidden lg:block">
+          <div class="">
             <div class="flex items-center">
               {/* Notifications button */}
               {
@@ -87,7 +98,7 @@ import AdminMenu from './AdminMenu'
               </div>
             </div>
           </div>
-          <div class="-mr-2 flex lg:hidden">
+          <!-- <div class="-mr-2 flex lg:hidden">
             {/* Mobile menu button */}
             <div class="relative ml-1">
               <AdminMenu
@@ -97,7 +108,7 @@ import AdminMenu from './AdminMenu'
                 organizations={Astro.locals.organizations}
               />
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
