--- a/src/pages/admin/roles/_Table.astro
+++ b/src/pages/admin/roles/_Table.astro
@@ -15,10 +15,16 @@ let data: any = {
 }
 let error: CustomError = null
 if (Astro.locals.userTokenError) {
+  if (import.meta.env.DEV) {
+    console.error('Problema con el token de usuario en la obtención de roles.')
+  }
   error = handleErrorFromServer(Astro.locals.userTokenError)
 } else {
   const permissionVerification = await verifyPermission(Astro.locals.roleId, Api.ROLE_ALL)
   if (!permissionVerification.isSuccess) {
+    if (import.meta.env.DEV) {
+      console.error('Problema con el permiso del usuario en la obtención de roles.')
+    }
     error = handleErrorFromServer(permissionVerification.error)
   } else {
     try {
