--- a/src/pages/admin/usuarios/_Table.astro
+++ b/src/pages/admin/usuarios/_Table.astro
@@ -16,10 +16,16 @@ let data: any = {
 }
 let error: CustomError = null
 if (Astro.locals.userTokenError) {
+  if (import.meta.env.DEV) {
+    console.error('Problema con el token de usuario en la obtención de usuarios.')
+  }
   error = handleErrorFromServer(Astro.locals.userTokenError)
 } else {
   const permissionVerification = await verifyPermission(Astro.locals.roleId, Api.USER_ALL)
   if (!permissionVerification.isSuccess) {
+    if (import.meta.env.DEV) {
+      console.error('Problema con el permiso del usuario en la obtención de usuarios.')
+    }
     error = handleErrorFromServer(permissionVerification.error)
   } else {
     try {
